api for commands works and are tested
