# server/Api/openapi-with-docs.json
@@ -6,6 +6,50 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/api/Command/{turbineId}": {
+      "post": {
+        "tags": [
+          "Command"
+        ],
+        "operationId": "Command_SendCommand",
+        "parameters": [
+          {
+            "name": "turbineId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "requestBody": {
+          "x-name": "command",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TurbineCommandDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/auth/login": {
       "post": {
         "tags": [
@@ -111,40 +155,6 @@
         }
       }
     },
-    "/api/Command/{turbineId}/command": {
-      "post": {
-        "tags": [
-          "Command"
-        ],
-        "operationId": "Command_SendCommand",
-        "parameters": [
-          {
-            "name": "turbineId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "x-position": 1
-          }
-        ],
-        "requestBody": {
-          "x-name": "command",
-          "content": {
-            "application/json": {
-              "schema": {}
-            }
-          },
-          "required": true,
-          "x-position": 2
-        },
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/GetMeasurements": {
       "get": {
         "tags": [
@@ -191,6 +201,29 @@
   },
   "components": {
     "schemas": {
+      "TurbineCommandDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "action": {
+            "type": "string"
+          },
+          "value": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "reason": {
+            "type": "string",
+            "nullable": true
+          },
+          "angle": {
+            "type": "number",
+            "format": "double",
+            "nullable": true
+          }
+        }
+      },
       "LoginResponse": {
         "type": "object",
         "additionalProperties": false,
